--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,16 +1,4 @@
 es:
-    
-  forms: 
-    email: 'Email'
-    password: 'Contraseña'
-    password_conf: 'Confirmar Contraseña'
-    sign_in_btn: 'Iniciar Sesión'
-    register_btn: 'Regístrate'
-    register_slogun: '¡Regístrate, es gratis!'
-    email_confirmation_text: 'Se enviará un mail de confirmación'
-    remember_me: 'Recuerda mis datos'
-    lost_password_text: '¿La olvidaste?'
-
   errors:
     messages:
       expired: "ha expirado, por favor pida uno nuevo"
@@ -75,3 +63,18 @@ es:
       course:
         one: Curso
         many: Cursos
+        
+  forms: 
+    email: 'Email'
+    password: 'Contraseña'
+    password_confirmation: 'Confirmar Contraseña'
+    sign_in_btn: 'Iniciar Sesión'
+    register_btn: 'Regístrate'
+    register_slogun: '¡Regístrate, es gratis!'
+    email_confirmation_text: 'Se enviará un mail de confirmación'
+    remember_me: 'Recuerdame'
+    lost_password_text: '¿Olvidaste tu contraseña?'
+    
+  footer:
+    teacher_register: 'Registro como maestro'
+  
