As a student, I can see a list of all available courses.

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -32,3 +32,9 @@ es:
       actions:
         update: Actualizar
         create: Crear
+
+
+
+  courses:
+    index:
+      title: Todos los cursos disponibles
