Initial courses show page

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -33,8 +33,8 @@ es:
         update: Actualizar
         create: Crear
 
-
-
   courses:
+    archives: 'Archivos'
     index:
       title: Todos los cursos disponibles
+      
