removed in html css, logout link

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -44,6 +44,10 @@ es:
         update: Actualizar
         create: Crear
 
+  shared:
+    toolbar:
+      logout: Salir
+  
   courses:
     archives: 'Archivos'
     index:
