wip, having problems with joint table between user and course

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -23,6 +23,9 @@ es:
       course:
         one: Curso
         many: Cursos
+      assignment:
+        one: Ejercicio
+        many: Ejercicios
     attributes:
       course:
         name: Nombre
