--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -21,6 +21,7 @@ es:
     course_created: Curso creado
     course_updated: El curso fue actualizado
     course_join_requested: Solicitud de unirse enviada
+    user_updated: Perfil actualizado
 
   activerecord:
     models:
@@ -93,3 +94,8 @@ es:
       join_requested: Solicitud pendiente
       join_rejected: Solicitud rechazada
       join_accepted: Cursando
+
+
+  users:
+    show:
+      edit: Editar perfil
