--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -113,6 +113,5 @@ es:
       join_accepted: Cursando
 
 
-  users:
-    show:
-      edit: Editar perfil
+  profile:
+    edit_profile: Editar perfil
