basic discussion actions

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -28,6 +28,7 @@ es:
     assignment_created: La tarea fue creada
     network_created: La red fue creada
     network_updated: La red fue actualizada
+    discussion_created: Discusion creada 
 
   activerecord:
     models:
@@ -94,7 +95,8 @@ es:
     add_asset: Añadir archivo
     course_menu:
       wall: 'Muro'
-      discus: 'Discusiones'
+      new_discussion: 'Crear discusión'
+      discussions: 'Discusiones'
       tasks: 'Tareas'
       docs: 'Documentos'
       evaluations: 'Evaluaciones'
