Supervisor can login; view courses; view teachers/students

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -140,3 +140,11 @@ es:
     show:
       title:  'Configuraciones'
       change_password: 'Cambiar contraseña'
+
+
+
+  supervisors:
+    show:
+      courses: Cursos
+      teachers: Maestros
+      students: Estudiantes
