--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -78,6 +78,8 @@ es:
       
   dashboard:
     view_all_courses: 'Ver todos los cursos disponibles'
+    start: 'Inicio'
+    profile: 'Perfil'
   
   courses:
     archives: 'Archivos'
