--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -68,6 +68,7 @@ es:
       default: "%A, %d de %B de %Y %H:%M:%S %z"
       short: "%d de %b %H:%M"
       long: "%d de %B de %Y %H:%M"
+      medium: "%e %b '%y"
     am: "am"
     pm: "pm"
 
