comment can be commented (bug fix), comment's comment shows visual hierarchy, specs on green

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -150,7 +150,7 @@ es:
 
   comments:
     comments:
-      remove: eliminar commentario
+      remove: eliminar comentario
     
   settings:
     show:
