--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -82,6 +82,7 @@ es:
     view_all_courses: 'Ver todos los cursos disponibles'
     start: 'Inicio'
     profile: 'Perfil'
+    account_settings: 'Configuración de la cuenta'
   
   courses:
     archives: 'Archivos'
