several stories fixed

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -104,6 +104,7 @@ es:
       wall: 'Muro'
       new_discussion: 'Crear discusión'
       discussions: 'Discusiones'
+      requests: 'Solicitudes'
       tasks: 'Tareas'
       docs: 'Documentos'
       evaluations: 'Evaluaciones'
