--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -209,6 +209,7 @@ es:
       less_than_or_equal_to: "debe ser menor que o igual a %{count}"
       odd: "debe ser impar"
       even: "debe ser par"
+      taken: "ya está en uso"
 
     errors:
       template:
