--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -188,6 +188,7 @@ es:
       
   flash:
     comment_added: 'Comment added with succes!'
+    discussion_updated: 'Discusion Actualisada'
 
   errors:
     format: "%{attribute} %{message}"
