Adds requests to members link

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -121,6 +121,7 @@ es:
       students: 'Estudiantes'
       member: 'Miembro'
       members: 'Miembros'
+      requests: 'Solicitudes'
     requests:
       pending_requests: 'Solicitudes Pendientes'
     index:
