course request in course members

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -65,6 +65,9 @@ es:
         studies: Mis estudios
         birth_date: Fecha de nacimiento
         occupation: Mi ocupación
+        current_password: Contraseña actual
+        password: Contraseña
+        password_confirmation: Confirmación de contraseña
 
   formtastic:
     actions:
@@ -123,6 +126,7 @@ es:
       member: 'Miembro'
       members: 'Miembros'
       requests: 'Solicitudes'
+    member: 
       pending: 'Aceptar'
       rejected: 'Rechazado'
       accepted: 'Aceptado'
