remove from course is no longer a button in member

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -131,7 +131,8 @@ es:
       rejected: 'Rechazado'
       accepted: 'Aceptado'
       accept: 'Aceptar'
-      reject: 'Quitar del curso'
+      reject: 'Reject'
+      remove: 'Quitar del curso'
       
     requests:
       pending_requests: 'Solicitudes Pendientes'
