--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -131,7 +131,7 @@ es:
       rejected: 'Rechazado'
       accepted: 'Aceptado'
       accept: 'Aceptar'
-      reject: 'Reject'
+      reject: 'Rechazar'
       remove: 'Quitar del curso'
       
     requests:
