Fixes members menu and adds tool tip to pending requests

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -126,6 +126,7 @@ es:
       member: 'Miembro'
       members: 'Miembros'
       requests: 'Solicitudes'
+      pending_requests: 'Solicitudes Pendientes'
     member: 
       pending: 'Aceptar'
       rejected: 'Rechazado'
