--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -133,16 +133,17 @@ es:
       accept: 'Aceptar'
       reject: 'Rechazar'
       remove: 'Quitar del curso'
-      
-    requests:
-      pending_requests: 'Solicitudes Pendientes'
-    index:
-      title: Todos los cursos disponibles
+    course:
       request_join: Solicitar unirse
       request_join_again: Solicitar unirse de nuevo
       join_requested: Solicitud pendiente
       join_rejected: Solicitud rechazada
       join_accepted: Cursando
+      
+    requests:
+      pending_requests: 'Solicitudes Pendientes'
+    index:
+      title: Todos los cursos disponibles
     wall:
       header: Muro
     assignments:
