--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -132,7 +132,7 @@ es:
       accept: 'Aceptar'
       reject: 'Rechazar'
       remove: 'Quitar del curso'
-    course:
+    requests: &requests
       requests: 'Solicitudes'
       pending_requests: 'Solicitudes Pendientes'
       request_join: Solicitar unirse
@@ -140,6 +140,8 @@ es:
       join_requested: Solicitud pendiente
       join_rejected: Solicitud rechazada
       join_accepted: Cursando
+    course: 
+      <<: *requests
     index:
       title: Todos los cursos disponibles
     wall:
