--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -199,3 +199,11 @@ es:
     pending_approvals:
       approve: Aceptar
       reject: Rechazar
+
+  views:
+    pagination:
+      previous: "&lt;"
+      first: "&laquo;"
+      last: "&raquo;"
+      truncate: "..."
+      next: "&gt;"
