Fixes and add complete infinite scrolling

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -189,6 +189,7 @@ es:
   flash:
     comment_added: 'Comment added with succes!'
     discussion_updated: 'Discusion Actualisada'
+    wrong_network: 'Red equivocada'
 
   errors:
     format: "%{attribute} %{message}"
