--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -174,6 +174,7 @@ es:
     show:
       header: Entrega de tarea
       delivered: Entrega
+      comment: Comentar entrega
 
   profile:
     edit_profile: 'Editar perfil'
