Initial Styling for Control Panel

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -193,6 +193,8 @@ es:
 
   supervisor:
     dashboard:
+      dashboard: 'Panel de control'
+      admin: 'Administración'
       courses: Cursos
       teachers: Maestros
       students: Estudiantes
