--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -170,6 +170,7 @@ es:
       edit_delivery: "Editar tarea"
       deliveries: Entregas
       show_delivery: Mostrar mi entrega
+      failed_delivery: La fecha de entrega ya pasó
 
   students:
     deliveries:
