Como visitante en el subdominio de una escuela veo su logo, slogan y mensaje de bienvenida - Finished - https://www.pivotaltracker.com/story/show/22189463

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -72,7 +72,7 @@ es:
         password: Contraseña
         password_confirmation: Confirmación de contraseña
       network:
-        slogan: Lema
+        slogan: Frase corta
         welcome_message: Mensaje de bienvenida
         time_zone: Zona horaria
       delivery:
