Show correct number of users in a course

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -133,6 +133,9 @@ es:
       students: 'Estudiantes'
       member: 'Miembro'
       members: 'Miembros'
+      count:
+        one:   '1 Miembro'
+        other: '%{count} Miembros'
     member: 
       pending: 'Aceptar'
       rejected: 'Rechazado'
