[#22251381] VIEW & STYLES FOR: Como alumno puedo entregar una tarea
https://www.pivotaltracker.com/story/show/22251381

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -17,6 +17,7 @@ es:
     remember_me: 'Recuerdame'
     lost_password_text: '¿Olvidaste tu contraseña?'
     leave_comment: 'Dejar comentario'
+    send_delivery: 'Entregar'
     
   footer:
     teacher_register: 'Registro como maestro'
