--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -18,6 +18,7 @@ es:
     lost_password_text: '¿Olvidaste tu contraseña?'
     leave_comment: 'Dejar comentario'
     send_delivery: 'Entregar'
+    update_delivery: 'Editar entrega'
     
   footer:
     teacher_register: 'Registro como maestro'
