VIEW & STYLES FOR Delivery show page, this applies to [#22251381] and [#22252435]
https://www.pivotaltracker.com/story/show/22251381
https://www.pivotaltracker.com/story/show/22252435

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -47,6 +47,9 @@ es:
       user:
         one: Usuario
         other: Usuarios
+      delivery:
+        one: Entrega
+        other: Entregas
     attributes:
       course:
         name: Nombre
