fixed issue with factory girl, correct answer can be selected on survey creat, wip

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -55,6 +55,9 @@ es:
       delivery:
         one: Entrega
         other: Entregas
+    errors:
+      question:
+        missing_correct_answer: Por favor indique la respuesta correcta
     attributes:
       course:
         name: Nombre
