--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -302,6 +302,8 @@ es:
     show_courses: Ver cursos
     show_assignment: Ver tarea
     show_survey: Ver cuestionario
+    show_survey_reply: Ver respuestas
+    
     student_course_enrollment: "<div class=\"img\">%{student_image}</div> %{student_link} quiere participar en el curso %{course_link}. %{members_link}"
     student_assignment_delivery: "<div class=\"img\">%{student_image}</div> %{student_link} ha entregado la tarea %{assignment_link}. %{delivery_link}"
     student_course_rejected: "Tu solicitud para participar en el curso \"%{course_name}\" fue rechazada. %{courses_link}"
@@ -310,3 +312,4 @@ es:
     student_assignment_updated: "Se ha actualizado la tarea %{assignment_link} en %{course_link}. %{show_assignment_link}"
     student_survey_added: "Se ha creado el cuestionario %{survey_link} en %{course_link}. %{show_survey_link}"
     student_survey_updated: "Se ha actualizado el cuestionario %{survey_link} en %{course_link}. %{show_survey_link}"
+    teacher_survey_replied: "<div class=\"img\">%{student_image}</div> %{student_link} ha contestado el cuestionario %{survey_link} en %{course_link}. %{survey_reply_link}"
