completed survey replies listing for teacher

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -257,6 +257,8 @@ es:
       index:
         header: Cuestionarios respondidos para
         show: Mostrar cuestionario respondido
+        score: Calificación
+        updated: Actualizado
 
   profile:
     edit_profile: 'Editar perfil'
